<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ist"
    tools:context=".App.RealidadAumentada">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/nombresIST"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:textStyle="bold"
                android:fontFamily="@font/abel"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/green"/>

            <ImageView
                android:id="@+id/mallaImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:src="@drawable/a"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"/>

            <com.google.android.material.card.MaterialCardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/blueDark"
                app:cardCornerRadius="20dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tituloQuienesSomos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:text="Quienes somos"
                        android:textSize="24dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/quienesSomos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tituloQuienesSomos"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/quienesSomos"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="500dp"
                        android:layout_height="250dp"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:layout_below="@+id/quienesSomos"
                        android:src="@drawable/ist"
                        app:riv_corner_radius="10dp"/>


                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/blueDark"
                app:cardCornerRadius="20dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mision2">

                    <TextView
                        android:id="@+id/textVie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:text="@string/vision"
                        android:textSize="24dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:ems="20"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:padding="15dp"
                        android:text="@string/visionDescripcion"
                        android:textColor="@color/white"
                        android:textSize="15dp"/>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/blueDark"
                app:cardCornerRadius="20dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mision">

                    <TextView
                        android:id="@+id/textViewa"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:text="@string/mision"
                        android:textSize="24dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/editTextTextMultiLine2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:ems="20"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:padding="15dp"
                        android:text="@string/misionDescripcion"
                        android:textColor="@color/white"
                        android:textSize="15dp"/>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>


            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!--Botones-->
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/barBlack"
        app:hideOnScroll="true"
        app:menu="@menu/bottom_nav_menu"
        app:navigationIcon="@drawable/ic_baseline_photo_camera_24"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_home_24"
        app:backgroundTint="@color/barBlack"
        app:layout_anchor="@id/bar"
        app:tint="@color/blueLight" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>